--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_height="60dp"
                 android:layout_marginLeft="4dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/downvote" />
+                android:src="@drawable/profile" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -95,23 +95,15 @@
         <FrameLayout
             android:layout_width="400dp"
             android:layout_height="match_parent">
-        <VideoView
-            android:id="@+id/post_video"
+
+        <ImageView
+            android:id="@+id/post_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
-        <ImageButton
-            android:id="@+id/btnPlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="80dp"
-            android:onClick="videoSelected"
-            android:visibility="visible"
-            android:src="@android:drawable/ic_media_play" />
 
         </FrameLayout>
 
@@ -127,6 +119,7 @@
                 android:id="@+id/upvoteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:src="@drawable/blueupvote" />
 
             <TextView
@@ -143,6 +136,7 @@
                 android:id="@+id/downvoteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:src="@drawable/bluedownvote" />
 
             <ImageButton
@@ -152,7 +146,7 @@
                 android:layout_marginLeft="120dp"
                 android:baselineAlignBottom="false"
                 android:onClick="commentPathway"
-                android:src="@drawable/downvote"
+                android:src="@drawable/comment"
                 android:text="Comments" />
         </LinearLayout>
     </LinearLayout>
