--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -11,7 +11,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="4dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/post_border">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,7 +57,7 @@
                         android:id="@+id/text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="uploaded a video"
+                        android:text="posted at"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -98,11 +99,12 @@
 
         <ImageView
             android:id="@+id/post_image"
-            android:layout_width="match_parent"
+            android:layout_width="386dp"
             android:layout_height="200dp"
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter"
+            />
 
 
         </FrameLayout>
@@ -143,7 +145,7 @@
                 android:id="@+id/commentPathway"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="160dp"
                 android:baselineAlignBottom="false"
                 android:onClick="commentPathway"
                 android:src="@drawable/comment"
