--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/nav_profile"
-        android:title="Profile"
+        android:title="My Posts"
         android:icon="@drawable/profile_icon"/>
 
     <item
