--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/my_profile_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="I am .. <- Enter word here"
+                android:text="Enter status here"
                 android:layout_below="@+id/my_profile_username"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
