--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,8 +14,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/my_profile_pic"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
@@ -64,11 +64,13 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/only_users_post_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="405dp"
+                android:layout_height="400dp"
                 android:layout_alignStart="@+id/my_Posts"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
-            </androidx.recyclerview.widget.RecyclerView>
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="350dp"
+                android:background="@color/colorProfile"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>
 
 
         </RelativeLayout>
