--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -146,11 +146,11 @@
                 android:layout_width="99dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="160dp"
+                android:background="@null"
                 android:baselineAlignBottom="false"
                 android:onClick="commentPathway"
                 android:src="@drawable/comment"
-                android:text="Comments"
-                android:background="#ffffff"/>
+                android:text="Comments" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
