--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
             android:scaleType="centerCrop"
             android:layout_marginBottom="4dp"
             android:layout_marginRight="12dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="#046A38"
             android:baselineAlignBottom="false"
             android:focusableInTouchMode="false"
             android:id="@+id/add_new_post_button"/>
