--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -3,6 +3,6 @@
     android:id="@+id/main_app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark">
+    android:background="#046A38">
 
 </androidx.appcompat.widget.Toolbar>
