--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/header">
+    android:background="#046A38">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/nav_profile_image"
@@ -15,7 +15,7 @@
         android:layout_marginStart="31dp"
         android:layout_marginTop="17dp"
         android:src="@drawable/profile"
-        app:civ_border_color="@color/colorPrimaryDark"
+        app:civ_border_color="#B9975B"
         app:civ_border_width="2dp" />
 
     <TextView
