--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -54,5 +54,15 @@
         android:visibility="gone"
         android:layout_alignParentBottom="true" />
 
+    <RadioButton
+        android:id="@+id/anonymous_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Be Anonymous"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="170dp"
+        android:background="#fff"/>
+
 
 </RelativeLayout>
