--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,6 +47,20 @@
             android:focusableInTouchMode="false"
             android:id="@+id/add_new_post_button"/>
 
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_above="@+id/main_container"
+            android:src="@drawable/mod"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="12dp"
+            android:background="#046A38"
+            android:layout_centerHorizontal="true"
+            android:baselineAlignBottom="false"
+            android:focusableInTouchMode="false"
+            android:id="@+id/modBtn"/>
+
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
