--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -58,11 +58,18 @@
         android:id="@+id/anonymous_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Be Anonymous"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="205dp"
         android:layout_marginBottom="170dp"
-        android:background="#fff"/>
+        android:buttonTint="@color/common_google_signin_btn_text_dark_focused" />
+    <ImageView
+        android:id="@+id/icon1"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="171dp"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/anonymous"
+        android:layout_marginLeft="175dp" />
 
 
 </RelativeLayout>
