--- a/app/src/main/res/layout/activity_click_post.xml
+++ b/app/src/main/res/layout/activity_click_post.xml
@@ -18,6 +18,17 @@
         app:srcCompat="@drawable/select_image"
         />
 
+    <VideoView
+        android:id="@+id/click_post_video"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        />
+
     <TextView
         android:id="@+id/click_post_description"
         android:layout_width="match_parent"
