--- a/app/src/main/res/layout/activity_post_video.xml
+++ b/app/src/main/res/layout/activity_post_video.xml
@@ -23,23 +23,10 @@
         android:text="Record"
         android:id="@+id/recordButton"
         android:layout_below="@+id/progressBar3"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="70dp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Upload"
-        android:id="@+id/uploadButton"
-        android:layout_toRightOf="@+id/recordButton"
-        android:layout_below="@+id/progressBar3"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Download"
-        android:id="@+id/downloadButton"
-        android:layout_toRightOf="@+id/uploadButton"
-        android:layout_below="@+id/progressBar3"/>
 
     <EditText
         android:id="@+id/postVideoDescription"
